# opauque-stellar

./: .gitignore  Cargo.toml  DISCLAIMER.md  README.md  SECURITY.md  commits.md  deny.toml  package.json  soroban.toml
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/workflows/: rpc-health.yml
contracts/attestation-engine-v2/: Cargo.toml
contracts/attestation-engine-v2/src/: lib.rs
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/scripts/: encode_vk.mjs
contracts/groth16-verifier/src/: lib.rs
contracts/reputation-verifier/: Cargo.toml
contracts/reputation-verifier/src/: lib.rs
contracts/schema-registry/src/: lib.rs
contracts/stealth-announcer/: Cargo.toml
contracts/stealth-announcer/src/: lib.rs
contracts/stealth-registry/: Cargo.toml
contracts/stealth-registry/src/: lib.rs
demo/src/: config.ts  nullifierStore.ts  verifier.ts
deployments/: README.md
deployments/v1/: rpc-health.json  testnet.previous.example.json
docs/: PUBLIC_SIGNALS.md  schema-id-vectors.md
docs/runbooks/: deployment-rollback.md  rpc-health.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/components/: AdminPanel.tsx  AttestationManager.tsx  BrandingPage.tsx  ClaimModal.tsx  ContractVersionPanel.tsx  DashboardView.tsx  Footer.tsx  (+14 more)
scanner/: Cargo.toml
scanner/src/: attestation.rs  lib.rs
scripts/: probe-horizon-rpc.mjs  rollback-deployment.mjs  verify-deployment-manifest.ts  verify-security-audit.ts
scripts/event-decoder/: example-indexer.ts  package.json
(+36 files in other folders)
