[workspace]
members = [
    "contracts/stealth-registry",
    "contracts/stealth-announcer",
    "contracts/groth16-verifier",
    "contracts/reputation-verifier",
    "contracts/schema-registry",
    "contracts/attestation-engine-v2",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
