[workspace]
members = [
    "contracts/stealth-registry",
    "contracts/stealth-announcer",
    "contracts/groth16-verifier",
    "contracts/reputation-verifier",
    "contracts/opaque-schema-core",
    "contracts/schema-registry",
    "contracts/attestation-engine-v2",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "=25.3.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
